<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/are_you_enjoying_the_app"
            android:textColor="#ffce00"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/we_want_to_thank_you_for_using_our_service_and_are_committed_to_delivering_the_highest_quality_services_to_our_customers"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <ImageView
            android:id="@+id/pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_undraw_for_review_eqxk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/m1" />

        <TextView
            android:id="@+id/m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/will_you_take_a_moment_of_your_time_to_review_us_on_google_play_store_it_would_only_take_a_couple_of_seconds_your_feedback_helps_us_provinding_the_best_experience_to_our_customers"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pic" />

        <TextView
            android:id="@+id/notnowbt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="1dp"
            android:background="#FF6365"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/not_nowrt"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/gd1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb" />

        <TextView
            android:id="@+id/reviewitbt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:background="#FF6365"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/yeah_why_not"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gd1"
            app:layout_constraintTop_toBottomOf="@id/cb" />

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:buttonTint="#ffce00"
            android:text="@string/don_t_ask_me_again"
            android:textColor="#ffce00"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/m2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>