<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/icon" />

            <TextView
                android:id="@+id/promo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/bottomMenuHeading"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <LinearLayout
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:visibility="gone"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/promo" />

            <TextView
                android:id="@+id/premiummenu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="25dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/premium"
                android:background="@drawable/textviewbgdialog"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_attach_money_24"
                app:layout_constraintTop_toBottomOf="@id/spacer" />

            <TextView
                android:id="@+id/settingsmenu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@drawable/textviewbgdialog"
                android:text="@string/rate_amp_review_app"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
                app:layout_constraintTop_toBottomOf="@id/premiummenu" />

            <TextView
                android:id="@+id/helpmenu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@drawable/textviewbgdialog"
                android:text="@string/help_and_feedback"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_help_24"
                app:layout_constraintTop_toBottomOf="@id/settingsmenu" />

            <TextView
                android:id="@+id/sharemenu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="25dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@drawable/textviewbgdialog"
                android:text="@string/share_app"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/helpmenu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>